--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ body, html{
 }
 
 .bg-image{
-    background-image: url("galaxy.jpg");
+    background-image: url("image.jpeg");
     filter: blur(8px);
-  -webkit-filter: blur(8px);
+  -webkit-filter: blur(3px);
   
 
   
