--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
 <body>
     
 <div class="topnav" id="myTopnav">
-  <a href="index.html".html" class="active">Home</a>
-  <a href="#about">About</a>
+  <a href="index.html" class="active">Home</a>
+  <a href="about.html">About</a>
   <a href="skills.html">Skills</a>
   <a href="contact.html">Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
