--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <a href="index.html" class="active">Home</a>
     <a href="about.html">About</a>
     <a href="skills.html">Skills</a>
-    <a href="#Contact">Contact</a>
+    <a href="contact.html">Contact</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
