--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html" class="active">Home</a>
         <a href="about.html">About</a>
-        <a href="#Skills">Skills</a>
+        <a href="skills.html">Skills</a>
         <a href="contact.html">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
