--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body, html{
 }
 
 .bg-image{
-    background-image: url("image.jpeg");
+    background-image: url("book.jpg");
     filter: blur(8px);
   -webkit-filter: blur(3px);
   
