--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html{
 
   
   height: 100%;
-  background-position: center;
+  background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
 }
