--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <p>National Institute of Technology Surathkal</p>
     <p>Mobile No.: 9770154209</p>
     <p>Email: aakritithawre.202is001@gmail.com</p>
-    <a href="#"><i class="fa fa-dribbble"></i></a>
+    <a href="https://dribbble.com/thawre2"><i class="fa fa-dribbble"></i></a>
     <a href="https://twitter.com/AakritiThawre97"><i class="fa fa-twitter"></i></a>
     <a href="https://www.linkedin.com/in/aakriti-thawre-944111126/"><i class="fa fa-linkedin"></i></a>
     <a href="#"><i class="fa fa-facebook"></i></a>
